# romgeo

./: README.md  README.ro.md  pyproject.toml  setup.cfg
.devel/: build.ps1  build.sh  grid_metadata.json
.github/workflows/: build_pkg.yml  pypi.yml
docs/: extras.rst  transformations.rst
tests/: romgeo_test1.py
