[project]
name = "romgeo"
version = "0.1.4"
dependencies = [
  "numba<=0.58.1",
  "numpy<=1.24.4",
  "pyproj<=3.6.1"
]
authors = [
  { name="Mihail-Alexandru CRETU", email="romgeo@cartografie.ro" },
]
description = "RomGEO Geospatial Utilities for Romania"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/cartografie-ro/romgeo/"
Issues = "https://github.com/cartografie-ro/romgeo/issues"

[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
]
